* Fix spacing on select filter.

--- a/themes/default/style.css
+++ b/themes/default/style.css
@@ -28,9 +28,7 @@ body {
     margin-bottom: 1rem;
 }
 
-.select_filters {
-    margin-bottom: 2rem;
-}
+.select_filters {}
 
 video {
     max-width: 100%;
